--- a/client/assets/defaults.css
+++ b/client/assets/defaults.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
@@ -13,11 +14,11 @@ html, body {
 }
 
 body::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 body::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
 }
 
 body::-webkit-scrollbar-thumb {
@@ -34,7 +35,10 @@ img {
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   margin-top: 0px;
 }
 
@@ -68,20 +72,21 @@ p {
   margin: 1rem 0;
 }
 
-input[type=radio] {
+input[type='radio'] {
   height: 20px;
   width: 20px;
 }
 
 @media print {
-  html, body {
+  html,
+  body {
     font-size: 12px;
   }
 }
 
 /* remove select arrow on IE11 */
 select::-ms-expand {
-    display: none;
+  display: none;
 }
 
 #app {
