--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@ body {
   word-wrap: break-word;
   width: 100%;
   height: 100%;
+  min-height: 100%;
   font-family: 'Inter', sans-serif;
   background-color: var(--background-color);
   -webkit-font-smoothing: antialiased;
