fix(client): add pandacss support to storybook

--- a/client/.storybook/preview.css
+++ b/client/.storybook/preview.css
@@ -1,3 +1,5 @@
+@layer reset, base, tokens, recipes, utilities;
+
 html,
 body {
   margin: 0;
@@ -11,6 +13,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: touch;
   -webkit-tap-highlight-color: transparent;
+  background-color: var(--background);
 }
 
 body {
