--- a/client/.storybook/preview.css
+++ b/client/.storybook/preview.css
@@ -1,60 +1,62 @@
 @layer reset, base, tokens, recipes, utilities;
 
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  word-wrap: break-word;
-  width: 100%;
-  height: 100%;
-  font-family: 'Inter', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-overflow-scrolling: touch;
-  -webkit-tap-highlight-color: transparent;
-  background-color: var(--background);
-}
+@layer reset {
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    word-wrap: break-word;
+    width: 100%;
+    height: 100%;
+    font-family: 'Inter', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-overflow-scrolling: touch;
+    -webkit-tap-highlight-color: transparent;
+    background-color: var(--background);
+  }
 
-body {
-  transition: background-color 0.1s ease-in-out;
-}
+  body {
+    transition: background-color 0.1s ease-in-out;
+  }
 
-button,
-input,
-textarea,
-select,
-optgroup {
-  appearance: none;
-  outline: none; /* Focus styles are added at UI kit level */
-  border: none;
-  background-color: transparent;
-  -webkit-tap-highlight-color: transparent;
-  font-family: 'Inter', sans-serif;
-}
+  button,
+  input,
+  textarea,
+  select,
+  optgroup {
+    appearance: none;
+    outline: none; /* Focus styles are added at UI kit level */
+    border: none;
+    background-color: transparent;
+    -webkit-tap-highlight-color: transparent;
+    font-family: 'Inter', sans-serif;
+  }
 
-img {
-  max-width: 100%;
-}
+  img {
+    max-width: 100%;
+  }
 
-* {
-  box-sizing: border-box;
-}
+  * {
+    box-sizing: border-box;
+  }
 
-ul,
-ol {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
+  ul,
+  ol {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
 
-li {
-  margin: 0;
-}
+  li {
+    margin: 0;
+  }
 
-button {
-  border: none;
-  background: none;
-  padding: 0;
-  cursor: pointer;
+  button {
+    border: none;
+    background: none;
+    padding: 0;
+    cursor: pointer;
+  }
 }
