feat(client): restructure styled system setup

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,82 +1,7 @@
 @layer reset, base, tokens, recipes, utilities;
 
-@layer reset {
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    word-wrap: break-word;
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    font-family: 'Inter', sans-serif;
-    background-color: var(--background-color);
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-overflow-scrolling: touch;
-    -webkit-tap-highlight-color: transparent;
-  }
-
-  #app {
-    width: 100%;
-    height: 100%;
-  }
-
-  button,
-  input,
-  textarea,
-  select,
-  optgroup {
-    appearance: none;
-    outline: none; /* Focus styles are added at UI kit level */
-    border: none;
-    background-color: transparent;
-    -webkit-tap-highlight-color: transparent;
-    font-family: 'Inter', sans-serif;
-  }
-
-  img {
-    max-width: 100%;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-  ul,
-  ol {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-  }
-
-  li {
-    margin: 0;
-    list-style: none;
-  }
-
-  button {
-    border: none;
-    background: none;
-    padding: 0;
-    cursor: pointer;
-  }
-}
-
-@media print {
-  html,
-  body {
-    font-size: 12px;
-  }
-  html,
-  body,
-  div {
-    width: auto;
-    height: auto !important;
-    float: none !important;
-    position: static !important;
-    overflow: visible !important;
-    page-break-inside: auto;
-  }
-}
+/* NOTE:
+ * Preferably add global CSS inside ./styled-system/setup/global.ts
+ * so that you have access to the theme variables.
+ * This file is just the entry point for the Panda CSS layer definitions.
+ **/
