--- a/client/plugins/html-fragments-plugin/SplashScreen.css
+++ b/client/plugins/html-fragments-plugin/SplashScreen.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  background-color: var(--background-color);
+  background-color: #fff;
   inset: 0;
   z-index: 99999;
   opacity: 1;
@@ -48,7 +48,7 @@
 #splash-screen .splash-content-core {
   width: 100%;
   height: 100%;
-  background-color: var(--background-color);
+  background-color: green;
   border-radius: 50%;
 }
 
@@ -73,8 +73,8 @@
   width: 100%;
   height: 100%;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='30' width='30'%3E%3Ccircle cx='10' cy='10' r='1' fill='%23969696' fill-opacity='0.35' /%3E%3C/svg%3E");
-  -webkit-mask-image: radial-gradient(var(--background-color), #fff0);
-  mask-image: radial-gradient(var(--background-color), #fff0);
+  -webkit-mask-image: radial-gradient(green, #fff0);
+  mask-image: radial-gradient(green, #fff0);
   animation: dotsScale 5s infinite ease-in-out alternate;
   z-index: 1;
 }
